# report-bot

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  misc.py  pyproject.toml  report12.py  report7.py  requirements.txt  scheduled.py  start.sh
.github/workflows/: deploy.yaml  fake-deploy.yaml  publish-ghcr.yaml
