[project]
name = "report-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "multifacs",email = "kiwi0tails@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "pytelegrambotapi (>=4.26.0,<5.0.0)",
    "gspread (>=6.2.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
